[package]
name = "y_nes_wasm"
version = "0.1.1"
authors = ["YDKK <YDKK@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.y_nes]
path = "../common"

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
codegen-units = 1