[package]
name = "y_nes_wasm"
version = "0.2.0"
authors = ["YDKK <YDKK@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.y_nes]
path = "../common"

[dependencies]
wasm-bindgen = "0.2.88"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3