[package]
name = "y_nes_win"
version = "0.1.1"
authors = ["YDKK <YDKK@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "src/build.rs"

[[bin]]
name = "y_nes_win"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[target.'cfg(windows)'.dependencies.sdl2]
version = "0.35"
features = ["bundled"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dependencies]

[profile.release]
lto = true
codegen-units = 1

[dependencies.y_nes]
path = "../common"